styles.css
#chartPanel {
    width: 30%;
    padding: 20px;
    background-color: #f2f2f2;
    border: 1px solid #ccc;
    margin-top: 20px;
    float: right;
    overflow: hidden;
  }
  
  #chart {
    border-collapse: collapse;
    width: 100%;
  }
  
  #chart th, #chart td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: center;
  }
  
  #chart tr:nth-child(even) {
    background-color: #f2f2f2;
  }
  
  #chart th {
    background-color: #4CAF50;
    color: white;
    overflow: show;
  }


h1
{
  background: hidden;
  align-items: center;
}

head{
  align-items: center;
}

h3 
{
  font-size: large;
}

.boldRow {
  font-weight: bold;
  font-size: 30px;

}

body{
  align-items: center;
  text-align: center;
  display: flex;
  justify-content: center;
  width: 80%;
  margin: 0 auto;
  
}

.movementforBottom{
  position: fixed;
  bottom: 5px;
  right: 15%;
  display: grid;
  justify-content: center;
  grid-auto-flow: column;
  gap:15px;
}

.loadAll
{
  
  
  z-index: 2;
  
  display: grid;
  justify-content: center;
  grid-auto-flow: row;
   
}

.teamCreation
{
  
  
  display: grid;
  grid-auto-flow: row;
  
  z-index: 2;
  
}

.teamEdit
{
  position: fixed;
  z-index: 2;
  bottom: 5%;
  left: 5%;
}

.teamTableBody{
  position: fixed;
  z-index: 2;
  display: grid;
  justify-content: center;
  grid-auto-flow: column;
  gap:20px;
  top: 15%
  
}

/* this is for all the winners */

.topThreeWinners
{
  
  position: fixed;
  left: 5%;
  top: 40vh;
  display: grid;
  justify-content: center;
  grid-auto-flow: row;
  gap:20px;
  
  
}

.winnerOne{
  padding: 15px 40px;
  background-color: rgb(176, 51, 51);
  border-radius: 5%;
  
  
}

.winnerTwo{
  padding: 15px 40px;
  background-color: rgb(176, 51, 51);
  border-radius: 5%;
}

.winnerThree{
  padding: 15px 40px;
  background-color: rgb(176, 51, 51);
  border-radius: 5%;
}

.pColorteam{
  color: white;
}

/* .announcement
{
  
  background-repeat: no-repeat;
  background-size: cover;
  height:100vh;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
}  */

.iframe-background {
  position: fixed;
  z-index: 0;
  text-align: center;
  align-items: center;
}
iframe {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
}
.content {
  position:relative;
  align-items: center;
  text-align: center;
  top: 5%;
  z-index: 2;
  display:flex;
  justify-content: center;
  flex-direction: column;
}

.heading{
  z-index:5;

}

.welcome{
  font-family: "Myriad Pro", Myriad, "Liberation Sans", "Nimbus Sans L", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.buildingCompWelcome{
  font-family: "Myriad Pro", Myriad, "Liberation Sans", "Nimbus Sans L", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.sectionOne{
  position: static;
  display: grid;
  grid-auto-flow: row;
}

.wholeTableOutput
{
  position:fixed;
  
}
.tableAttributes{
  justify-content: center;
  gap: 30px;
  padding : 20px;
  
  
}



.teamTable
{
  justify-content:left;
  position: static;
  z-index: 2;
  top: 10px;
  flex-direction: column;
  gap:10px;
  
}
.teamAttributes{
  justify-content: left;
}

.actualTable{
  
  justify-content: left;
  border: #0066cc;
}

th{
  font-size: 30px;
  padding : 15px;
}

td{
   padding : 5px 20px;
}


input[type="text"] {
  width: 200px; 
  height: 20px; 
  border: 1px solid #ccc; 
  padding: 5px; 
  margin: 10px 0; 
  background-color: #f8f8f8; 
  color: #333; 
  font-family: Arial, sans-serif; 
}

input[type="text"] {
  border-radius: 8px; 
  box-shadow: 0px 0px 5px #aaa; 
}

input[type="text"]:focus {
  outline: none; 
  border: 1px solid #0066cc; 
  box-shadow: 0px 0px 5px #0066cc; 
}

input[type="number"] {
  width: 200px; 
  height: 20px; 
  border: 1px solid #ccc; 
  padding: 5px; 
  margin: 10px 0; 
  background-color: #f8f8f8; 
  color: #333; 
  font-family: Arial, sans-serif; 
}

input[type="number"] {
  border-radius: 8px; 
  box-shadow: 0px 0px 5px #aaa; 
}

input[type="number"]:focus {
  outline: none; 
  border: 1px solid #0066cc; 
  box-shadow: 0px 0px 5px #0066cc; 
}


button {
  background-color: #af4c4c; 
  border: none; 
  color: white; 
  padding: 8px 20px; 
  text-align: center; 
  text-decoration: none;
  display: inline-block; 
  font-size: 12px; 
  margin: 4px 2px; 
  cursor: pointer; 
  border-radius: 10px; 
  box-shadow: 0 5px #666;
}

button:hover {
  background-color: #600000; 
  transform: translateY(4px); 
  box-shadow: 0 0px #666;
}


button:active {
  background-color: #6d6d6d;  
}


button:focus {
  outline: none; 
  border: 1px solid #fff; 
}

/* DROPDOWN CSS */
.dropbtn {
  position: absolute;
  bottom: 10%;
  right: 10%;
  background-color: #ffffff;
  color: rgb(71, 71, 71);
  padding: 5px;
  font-size: 13px;
  border: none;
  cursor: pointer;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  bottom: 8%;
  right: 8%;
  background-color: #f9f9f9;
  min-width: 80px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;

}

.dropdown-content a {
  color: black;
  padding: 12px 13px;
  text-decoration: none;
  display: block;
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown:hover .dropbtn {
  background-color: #484848;
}

